[BED-169] Rollback collection type
Took 2 minutes